Added ability to accommodate bonuses and contributing a percentage of them

--- a/index.html
+++ b/index.html
@@ -23,6 +23,16 @@
             </div>
 
             <div class="input-group">
+                <label for="annual-bonus">Annual Bonus (£):</label>
+                <input type="number" id="annual-bonus" name="annual-bonus" required>
+            </div>
+        
+            <div class="input-group">
+                <label for="bonus-contribution">% of Bonus to Add to Pension:</label>
+                <input type="number" step="0.01" id="bonus-contribution" name="bonus-contribution" required>
+            </div>
+
+            <div class="input-group">
                 <label for="current-pension-pot">Current Pension Pot (£):</label>
                 <input type="number" id="current-pension-pot" name="current-pension-pot" required>
             </div>
