--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>UK Pension Calculator</title>
     <link rel="stylesheet" href="style.css">
+    <script defer data-domain="finance.markinthecloud.com" src="https://analytics.themaleva.co.uk/js/plausible.js"></script>
 </head>
 <body>
     <div class="container">
