--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
                 <label for="current-age">Current Age:</label>
                 <input type="number" id="current-age" name="current-age" required>
             </div>
-            
             <div class="input-group">
                 <label for="current-salary">Current Salary (£):</label>
                 <input type="number" id="current-salary" name="current-salary" required>
@@ -79,7 +78,7 @@
             <thead>
                 <tr>
                     <th>Age</th>
-                    <th>Current Salary</th>
+                    <th>Salary</th>
                     <th>Employee Contributions</th>
                     <th>Employer Contributions</th>
                     <th>Total Contributions</th>
